✨ feat: prisma init setup, i18n configuration, apply authentication for backend
List of update:
1. Prisma database migration for init setup
2. Locale using i18n for multiple language
3. Authentication for several activities: login, refresh token, and logout

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,7 @@
 
+APP_LANGUAGE="id" # en/id
 
 DATABASE_URL="postgresql://postgres:password123@localhost:5432/ipss?schema=public"
+
+JWT_ACCESS_TOKEN_SECRET="your_jwt_secret"
+JWT_REFRESH_TOKEN_SECRET="your_secret"
