--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -37,10 +37,14 @@ lerna-debug.log*
 
 # dotenv environment variable files
 .env
-.env.development.local
-.env.test.local
-.env.production.local
-.env.local
+test.env
+development.env
+production.env
+
+**/.env
+**/development.env
+**/test.env
+**/production.env
 
 # temp directory
 .temp
