--- a/backend/package.json
+++ b/backend/package.json
@@ -21,12 +21,15 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./apps/_gateway/test/jest-e2e.json",
-    "prisma:db:seed": "prisma db seed",
     "prisma:db:init": "prisma migrate dev --name init",
-    "prisma:db:migrate": "prisma migrate dev"
+    "prisma:db:migrate": "prisma migrate dev",
+    "prisma:db:seed": "prisma db seed",
+    "prisma:db:migrate:test": "dotenv -e env/test.env -- prisma migrate deploy",
+    "prisma:db:seed:test": "dotenv -e .env/test.env -- prisma db seed"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
@@ -35,6 +38,7 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "dotenv": "^16.4.7",
     "nestjs-i18n": "^10.5.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
