--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
   "prisma": {
     "seed": "ts-node prisma/seeder.ts"
   },
-  "scripts": {
+ "scripts": {
     "build": "nest build",
     "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
     "start": "nest start",
@@ -86,6 +86,28 @@
     "testEnvironment": "node",
     "roots": [
       "<rootDir>/apps/"
-    ]
+    ],
+    "coveragePathIgnorePatterns": [
+      "<rootDir>/node_modules",
+      "<rootDir>/test",
+      "<rootDir>/apps/_gateway/test",
+      "<rootDir>/apps/_gateway/src/_domain",
+      "<rootDir>/apps/_gateway/src/_infrastructure",
+      ".e2e-spec.(t|j)s",
+      ".repository.(t|j)s",
+      ".repository.impl.(t|j)s",
+      ".service.(t|j)s",
+      ".module.(t|j)s",
+      ".guard.(t|j)s",
+      ".dto.(t|j)s",
+      ".entity.(t|j)s",
+      "main.(t|j)s"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "lines": 80,
+        "statements": 80
+      }
+    }
   }
 }
