✨ feat: updating env for backend, respose result for login

--- a/backend/env/.env.example
+++ b/backend/env/.env.example
@@ -5,3 +5,6 @@ DATABASE_URL="postgresql://postgres:password123@localhost:5432/ipss?schema=publi
 
 JWT_ACCESS_TOKEN_SECRET="your_jwt_secret"
 JWT_REFRESH_TOKEN_SECRET="your_secret"
+JWT_EXPIRED="1h"
+JWT_EXPIRED_NUMBER=3600
+SALT_ROUND=10
