--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,7 @@
     "build": "nest build",
     "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
+    "start:dev": "dotenv -e env/development.env -- nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/apps/_gateway/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
